--- a/Input/mikmod/Makefile
+++ b/Input/mikmod/Makefile
@@ -149,7 +149,7 @@ am__v_lt_1 =
 libmikmod_la_LINK = $(LIBTOOL) $(AM_V_lt) $(AM_LIBTOOLFLAGS) \
 	$(LIBTOOLFLAGS) --mode=link $(CCLD) $(AM_CFLAGS) $(CFLAGS) \
 	$(libmikmod_la_LDFLAGS) $(LDFLAGS) -o $@
-#am_libmikmod_la_rpath = -rpath $(libdir)
+@HAVE_MIKMOD_TRUE@am_libmikmod_la_rpath = -rpath $(libdir)
 AM_V_P = $(am__v_P_$(V))
 am__v_P_ = $(am__v_P_$(AM_DEFAULT_VERBOSITY))
 am__v_P_0 = false
@@ -233,7 +233,7 @@ CTAGS = ctags
 CYGPATH_W = echo
 DEFS = -DHAVE_CONFIG_H
 DEPDIR = .deps
-ECHO = /bin/echo
+ECHO = @ECHO@
 ECHO_C = \c
 ECHO_N = 
 ECHO_T = 
@@ -262,13 +262,13 @@ INTL_MACOSX_LIBS = -Wl,-framework -Wl,CoreFoundation -Wl,-framework -Wl,CoreServ
 LDFLAGS = -L/opt/homebrew/opt/ruby/lib
 LIBICONV = -liconv
 LIBINTL = 
-LIBMIKMOD_CFLAGS = 
-LIBMIKMOD_CONFIG = no
-LIBMIKMOD_LDADD = 
-LIBMIKMOD_LIBS = 
+LIBMIKMOD_CFLAGS = @LIBMIKMOD_CFLAGS@
+LIBMIKMOD_CONFIG = @LIBMIKMOD_CONFIG@
+LIBMIKMOD_LDADD = @LIBMIKMOD_LDADD@
+LIBMIKMOD_LIBS = @LIBMIKMOD_LIBS@
 LIBOBJS = 
 LIBS =   -L/lib -lxml  
-LIBTOOL = $(SHELL) $(top_builddir)/libtool
+LIBTOOL = @LIBTOOL@
 LN_S = ln -s
 LTLIBICONV = -liconv
 LTLIBINTL = 
@@ -287,12 +287,12 @@ OSS_CFLAGS =
 OUTPUT_PLUGINS = $(ALL_PLUGINS)
 OUTPUT_PLUGIN_DIR = Output
 PACKAGE = xmms
-PACKAGE_BUGREPORT = 
-PACKAGE_NAME = 
-PACKAGE_STRING = 
-PACKAGE_TARNAME = 
+PACKAGE_BUGREPORT = https://updatez.org
+PACKAGE_NAME = xmms
+PACKAGE_STRING = xmms 0.0.1
+PACKAGE_TARNAME = xmms
 PACKAGE_URL = 
-PACKAGE_VERSION = 
+PACKAGE_VERSION = 0.0.1
 PATH_SEPARATOR = :
 PLUGIN_LDFLAGS = -module -avoid-version -export-symbols-regex "get_.plugin_info"
 POSIX_LIBS = 
@@ -303,7 +303,7 @@ SED = /opt/homebrew/bin/gsed
 SET_MAKE = 
 SHELL = /bin/sh
 SM_LIBS = 
-STRIP = strip
+STRIP = 
 USE_NLS = no
 VERSION = 0.0.1
 VISUALIZATION_PLUGINS = $(ALL_PLUGINS)
@@ -342,7 +342,7 @@ build_vendor = apple
 builddir = .
 datadir = ${datarootdir}
 datarootdir = ${prefix}/share
-docdir = ${datarootdir}/doc/${PACKAGE}
+docdir = ${datarootdir}/doc/${PACKAGE_TARNAME}
 dvidir = ${docdir}
 exec_prefix = ${prefix}
 host = aarch64-apple-darwin23.6.0
@@ -380,11 +380,11 @@ top_build_prefix = ../../
 top_builddir = ../..
 top_srcdir = ../..
 xmmsdir = 
-#lib_LTLIBRARIES = libmikmod.la
-INCLUDES = @GTK_CFLAGS@  -I$(top_builddir)/intl
+@HAVE_MIKMOD_TRUE@lib_LTLIBRARIES = libmikmod.la
+INCLUDES = @GTK_CFLAGS@ @LIBMIKMOD_CFLAGS@ -I$(top_builddir)/intl
 libmikmod_la_LDFLAGS = -module -avoid-version -export-symbols-regex "get_.plugin_info"
 libmikmod_la_LIBADD = @GTK_LIBS@  \
-  
+@LIBMIKMOD_LIBS@ @LIBMIKMOD_LDADD@ 
 
 libmikmod_la_SOURCES = drv_xmms.c mikmod-plugin.h plugin.c mikmod.xpm
 all: all-am
