--- a/Makefile.in
+++ b/Makefile.in
@@ -101,7 +101,13 @@ am__aclocal_m4_deps = $(top_srcdir)/autoconf-m4/build-to-host.m4 \
 	$(top_srcdir)/autoconf-m4/lib-ld.m4 \
 	$(top_srcdir)/autoconf-m4/lib-link.m4 \
 	$(top_srcdir)/autoconf-m4/lib-prefix.m4 \
+	$(top_srcdir)/autoconf-m4/libtool.m4 \
+	$(top_srcdir)/autoconf-m4/ltoptions.m4 \
+	$(top_srcdir)/autoconf-m4/ltsugar.m4 \
+	$(top_srcdir)/autoconf-m4/ltversion.m4 \
+	$(top_srcdir)/autoconf-m4/lt~obsolete.m4 \
 	$(top_srcdir)/autoconf-m4/nls.m4 \
+	$(top_srcdir)/autoconf-m4/pkg.m4 \
 	$(top_srcdir)/autoconf-m4/po.m4 \
 	$(top_srcdir)/autoconf-m4/progtest.m4 \
 	$(top_srcdir)/acinclude.m4 $(top_srcdir)/configure.ac
@@ -112,9 +118,8 @@ DIST_COMMON = $(srcdir)/Makefile.am $(top_srcdir)/configure \
 am__CONFIG_DISTCLEAN_FILES = config.status config.cache config.log \
  configure.lineno config.status.lineno
 mkinstalldirs = $(install_sh) -d
-CONFIG_HEADER = config.h $(top_builddir)/xmms/i18n.h
-CONFIG_CLEAN_FILES = xmms.1 wmxmms.1 gnomexmms.1 xmms.spec xmms-config \
-	intl/Makefile
+CONFIG_HEADER = config.h
+CONFIG_CLEAN_FILES =
 CONFIG_CLEAN_VPATH_FILES =
 am__vpath_adj_setup = srcdirstrip=`echo "$(srcdir)" | sed 's|.|.|g'`;
 am__vpath_adj = case $$p in \
@@ -204,19 +209,15 @@ am__define_uniq_tagged_files = \
   done | $(am__uniquify_input)`
 DIST_SUBDIRS = $(SUBDIRS)
 am__DIST_COMMON = $(srcdir)/Makefile.in $(srcdir)/config.h.in \
-	$(srcdir)/gnomexmms.1.in $(srcdir)/wmxmms.1.in \
-	$(srcdir)/xmms-config.in $(srcdir)/xmms.1.in \
-	$(srcdir)/xmms.spec.in $(top_srcdir)/autoconf/ar-lib \
-	$(top_srcdir)/autoconf/compile \
+	$(top_srcdir)/autoconf/ar-lib $(top_srcdir)/autoconf/compile \
 	$(top_srcdir)/autoconf/config.guess \
 	$(top_srcdir)/autoconf/config.rpath \
 	$(top_srcdir)/autoconf/config.sub \
 	$(top_srcdir)/autoconf/install-sh \
 	$(top_srcdir)/autoconf/ltmain.sh \
-	$(top_srcdir)/autoconf/missing $(top_srcdir)/intl/Makefile.in \
-	ABOUT-NLS AUTHORS COPYING ChangeLog INSTALL NEWS README TODO \
-	acconfig.h autoconf/ar-lib autoconf/compile \
-	autoconf/config.guess autoconf/config.rpath \
+	$(top_srcdir)/autoconf/missing ABOUT-NLS AUTHORS COPYING \
+	ChangeLog INSTALL NEWS README TODO acconfig.h autoconf/ar-lib \
+	autoconf/compile autoconf/config.guess autoconf/config.rpath \
 	autoconf/config.sub autoconf/depcomp autoconf/install-sh \
 	autoconf/ltmain.sh autoconf/missing compile config.guess \
 	config.sub depcomp install-sh ltmain.sh missing mkinstalldirs
@@ -276,9 +277,6 @@ AUTOHEADER = @AUTOHEADER@
 AUTOMAKE = @AUTOMAKE@
 AWK = @AWK@
 CC = @CC@
-CCAS = @CCAS@
-CCASDEPMODE = @CCASDEPMODE@
-CCASFLAGS = @CCASFLAGS@
 CCDEPMODE = @CCDEPMODE@
 CFLAGS = @CFLAGS@
 CPP = @CPP@
@@ -288,22 +286,32 @@ CTAGS = @CTAGS@
 CYGPATH_W = @CYGPATH_W@
 DEFS = @DEFS@
 DEPDIR = @DEPDIR@
-ECHO = @ECHO@
+DLLTOOL = @DLLTOOL@
+DSYMUTIL = @DSYMUTIL@
+DUMPBIN = @DUMPBIN@
 ECHO_C = @ECHO_C@
 ECHO_N = @ECHO_N@
 ECHO_T = @ECHO_T@
 EFFECT_PLUGINS = @EFFECT_PLUGINS@
 EFFECT_PLUGIN_DIR = @EFFECT_PLUGIN_DIR@
+EGREP = @EGREP@
 ESD_CFLAGS = @ESD_CFLAGS@
 ESD_CONFIG = @ESD_CONFIG@
 ESD_LIBS = @ESD_LIBS@
 ETAGS = @ETAGS@
 EXEEXT = @EXEEXT@
+FGREP = @FGREP@
+FILECMD = @FILECMD@
 GENERAL_PLUGINS = @GENERAL_PLUGINS@
 GENERAL_PLUGIN_DIR = @GENERAL_PLUGIN_DIR@
 GETTEXT_MACRO_VERSION = @GETTEXT_MACRO_VERSION@
+GLIB_CFLAGS = @GLIB_CFLAGS@
+GLIB_LIBS = @GLIB_LIBS@
 GMSGFMT = @GMSGFMT@
 GMSGFMT_015 = @GMSGFMT_015@
+GREP = @GREP@
+GTK_CFLAGS = @GTK_CFLAGS@
+GTK_LIBS = @GTK_LIBS@
 HAVEXML = @HAVEXML@
 INPUT_PLUGINS = @INPUT_PLUGINS@
 INPUT_PLUGIN_DIR = @INPUT_PLUGIN_DIR@
@@ -312,33 +320,40 @@ INSTALL_DATA = @INSTALL_DATA@
 INSTALL_PROGRAM = @INSTALL_PROGRAM@
 INSTALL_SCRIPT = @INSTALL_SCRIPT@
 INSTALL_STRIP_PROGRAM = @INSTALL_STRIP_PROGRAM@
-LIBINTL = @LIBINTL@
 INTL_MACOSX_LIBS = @INTL_MACOSX_LIBS@
+LD = @LD@
 LDFLAGS = @LDFLAGS@
 LIBICONV = @LIBICONV@
 LIBINTL = @LIBINTL@
-LIBMIKMOD_CFLAGS = @LIBMIKMOD_CFLAGS@
-LIBMIKMOD_CONFIG = @LIBMIKMOD_CONFIG@
-LIBMIKMOD_LDADD = @LIBMIKMOD_LDADD@
-LIBMIKMOD_LIBS = @LIBMIKMOD_LIBS@
 LIBOBJS = @LIBOBJS@
 LIBS = @LIBS@
 LIBTOOL = @LIBTOOL@
+LIBXMMS_MAJOR_VERSION = @LIBXMMS_MAJOR_VERSION@
+LIBXMMS_MICRO_VERSION = @LIBXMMS_MICRO_VERSION@
+LIBXMMS_MINOR_VERSION = @LIBXMMS_MINOR_VERSION@
+LIPO = @LIPO@
 LN_S = @LN_S@
 LTLIBICONV = @LTLIBICONV@
 LTLIBINTL = @LTLIBINTL@
 LTLIBOBJS = @LTLIBOBJS@
+LT_SYS_LIBRARY_PATH = @LT_SYS_LIBRARY_PATH@
 MAINT = @MAINT@
 MAKEINFO = @MAKEINFO@
+MANIFEST_TOOL = @MANIFEST_TOOL@
 MKDIR_P = @MKDIR_P@
 MSGFMT = @MSGFMT@
 MSGMERGE = @MSGMERGE@
 MSGMERGE_FOR_MSGFMT_OPTION = @MSGMERGE_FOR_MSGFMT_OPTION@
+NM = @NM@
+NMEDIT = @NMEDIT@
+OBJDUMP = @OBJDUMP@
 OBJEXT = @OBJEXT@
 OGG_CFLAGS = @OGG_CFLAGS@
 OGG_LIBS = @OGG_LIBS@
 OPENGL_LIBS = @OPENGL_LIBS@
 OSS_CFLAGS = @OSS_CFLAGS@
+OTOOL = @OTOOL@
+OTOOL64 = @OTOOL64@
 OUTPUT_PLUGINS = @OUTPUT_PLUGINS@
 OUTPUT_PLUGIN_DIR = @OUTPUT_PLUGIN_DIR@
 PACKAGE = @PACKAGE@
@@ -349,10 +364,11 @@ PACKAGE_TARNAME = @PACKAGE_TARNAME@
 PACKAGE_URL = @PACKAGE_URL@
 PACKAGE_VERSION = @PACKAGE_VERSION@
 PATH_SEPARATOR = @PATH_SEPARATOR@
-PLUGIN_LDFLAGS = @PLUGIN_LDFLAGS@
+PKG_CONFIG = @PKG_CONFIG@
+PKG_CONFIG_LIBDIR = @PKG_CONFIG_LIBDIR@
+PKG_CONFIG_PATH = @PKG_CONFIG_PATH@
 POSIX_LIBS = @POSIX_LIBS@
 POSUB = @POSUB@
-PTHREAD_LIBS = @PTHREAD_LIBS@
 RANLIB = @RANLIB@
 SED = @SED@
 SET_MAKE = @SET_MAKE@
@@ -380,6 +396,7 @@ abs_top_builddir = @abs_top_builddir@
 abs_top_srcdir = @abs_top_srcdir@
 ac_ct_AR = @ac_ct_AR@
 ac_ct_CC = @ac_ct_CC@
+ac_ct_DUMPBIN = @ac_ct_DUMPBIN@
 ac_prefix_program = @ac_prefix_program@
 am__include = @am__include@
 am__leading_dot = @am__leading_dot@
@@ -428,14 +445,13 @@ runstatedir = @runstatedir@
 sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 srcdir = @srcdir@
-subdirs = @subdirs@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-xmmsdir = @xmmsdir@
-SUBDIRS = intl libxmms xmms Output Input Effect General Visualization wmxmms gnomexmms po
+ACLOCAL_AMFLAGS = -I autoconf-m4
+SUBDIRS = libxmms xmms Output Input Effect General Visualization wmxmms gnomexmms po
 bin_SCRIPTS = xmms-config
 EXTRA_DIST = xmms.spec xmms.spec.in FAQ xmms.m4
 m4datadir = $(datadir)/aclocal
@@ -451,15 +467,15 @@ $(srcdir)/Makefile.in: @MAINTAINER_MODE_TRUE@ $(srcdir)/Makefile.am  $(am__confi
 	@for dep in $?; do \
 	  case '$(am__configure_deps)' in \
 	    *$$dep*) \
-	      echo ' cd $(srcdir) && $(AUTOMAKE) --gnu'; \
-	      $(am__cd) $(srcdir) && $(AUTOMAKE) --gnu \
+	      echo ' cd $(srcdir) && $(AUTOMAKE) --foreign'; \
+	      $(am__cd) $(srcdir) && $(AUTOMAKE) --foreign \
 		&& exit 0; \
 	      exit 1;; \
 	  esac; \
 	done; \
-	echo ' cd $(top_srcdir) && $(AUTOMAKE) --gnu Makefile'; \
+	echo ' cd $(top_srcdir) && $(AUTOMAKE) --foreign Makefile'; \
 	$(am__cd) $(top_srcdir) && \
-	  $(AUTOMAKE) --gnu Makefile
+	  $(AUTOMAKE) --foreign Makefile
 Makefile: $(srcdir)/Makefile.in $(top_builddir)/config.status
 	@case '$?' in \
 	  *config.status*) \
@@ -493,18 +509,6 @@ $(srcdir)/config.h.in: @MAINTAINER_MODE_TRUE@ $(am__configure_deps) $(top_srcdir
 
 distclean-hdr:
 	-rm -f config.h stamp-h1
-xmms.1: $(top_builddir)/config.status $(srcdir)/xmms.1.in
-	cd $(top_builddir) && $(SHELL) ./config.status $@
-wmxmms.1: $(top_builddir)/config.status $(srcdir)/wmxmms.1.in
-	cd $(top_builddir) && $(SHELL) ./config.status $@
-gnomexmms.1: $(top_builddir)/config.status $(srcdir)/gnomexmms.1.in
-	cd $(top_builddir) && $(SHELL) ./config.status $@
-xmms.spec: $(top_builddir)/config.status $(srcdir)/xmms.spec.in
-	cd $(top_builddir) && $(SHELL) ./config.status $@
-xmms-config: $(top_builddir)/config.status $(srcdir)/xmms-config.in
-	cd $(top_builddir) && $(SHELL) ./config.status $@
-intl/Makefile: $(top_builddir)/config.status $(top_srcdir)/intl/Makefile.in
-	cd $(top_builddir) && $(SHELL) ./config.status $@
 install-binSCRIPTS: $(bin_SCRIPTS)
 	@$(NORMAL_INSTALL)
 	@list='$(bin_SCRIPTS)'; test -n "$(bindir)" || list=; \
